# redhat

./: .gitignore  .stickler.yml  CMakeLists.txt  CONTRIBUTORS.md  Makefile  README-hostprep.md  README.md  fixup.sh  header_opencontrol.yaml  opencontrol-redhat.spec  opencontrol.yaml  yamllint.conf
.github/workflows/: build.yml  validate-pr.yaml
OpenShift-v3/: CMakeLists.txt  Makefile  opencontrol.yaml
OpenShift-v3/policies/: AC-Access_Control.yaml  AT-Awareness_and_Training.yaml  CA-Security_Assessment_and_Authorization.yaml  CM-Configuration_Management.yaml  IA-Identification_and_Authentication.yaml  MA-Maintenance.yaml  MP-Media_Protection.yaml  PL-Planning.yaml  RA-Risk_Assessment.yaml  SA-System_and_Services_Acquisition.yaml  SI-System_and_Information_Integrity.yaml
OpenStackPlatform/: Makefile
OpenStackPlatform/build-scripts/: ssg-content-generator.py
OpenStackPlatform/guide/: horizon.group  horizon_csrf_cookie_secure.rule  horizon_disable_password_reveal.rule  horizon_file_ownership.rule  horizon_file_perms.rule  horizon_password_autocomplete.rule  horizon_session_cookie_httponly.rule  horizon_session_cookie_secure.rule  horizon_use_ssl.rule  java.group  java_jre_deployment_config_configured.group  java_jre_deployment_config_exists.rule  java_jre_deployment_config_mandatory.rule  java_jre_deployment_config_properties.rule  java_jre_deployment_properties_exists.rule  java_jre_untrusted_sources.rule  java_jre_untrusted_sources_locked.rule  java_jre_updated.rule  java_jre_validation_crl.rule  java_jre_validation_crl_locked.rule  java_jre_validation_ocsp.rule  java_jre_validation_ocsp_locked.rule
OpenStackPlatform/modules/: xccdf_generator.py
OpenStackPlatform/narratives/: Makefile
OpenStackPlatform/profiles/: rhel-osp-13-fedramp-low.profile  stig-java-upstream.profile
RHEL7/: Makefile  component.yaml  opencontrol.yaml
RHEL7/AU_policy/: component.yaml
RHEL7/policies/: AU-Audit_and_Accountability.yaml  CA-Security_Assessment_and_Authorization.yaml  CP-Contingency_Planning.yaml  IA-Identification_and_Authentication.yaml  IR-Incident_Response.yaml  MP-Media_Protection.yaml  PE-Physical_and_Environmental_Protection.yaml  PS-Personnel_Security.yaml  SC-Systems_and_Communications_Protection.yaml
ansible-tower/: ansible-tower.yaml  component.yaml  header_opencontrol.yaml  opencontrol.yaml
cmake/: OpenControlCommon.cmake
conf/: opencontrol.yaml
coreos-4/: header_opencontrol.yaml  opencontrol.yaml
coreos4/: component.yaml  coreos4.yaml  opencontrol.yaml
customer_cxo_controls/: Makefile  component.yaml  opencontrol.yaml
customer_pmo_controls/: Makefile  component.yaml
elements/rules/: horizon.group  horizon_csrf_cookie_secure.rule  horizon_disable_password_reveal.rule  horizon_file_perms.rule  horizon_password_autocomplete.rule  horizon_session_cookie_secure.rule  horizon_use_ssl.rule
enterprise-linux-7/: opencontrol.yaml
enterprise-linux-8/: header_opencontrol.yaml  opencontrol.yaml
identity-management/: opencontrol.yaml
idm/: component.yaml  idm.yaml  opencontrol.yaml
insights/: component.yaml  insights.yaml  opencontrol.yaml
narratives/: Makefile  opencontrol.yaml
narratives/AC-Access_Control/: component.yaml
narratives/AT-Awareness_and_Training/: component.yaml
narratives/AU-Audit_and_Accountability/: component.yaml
ocp3/: component.yaml  ocp3.yaml  opencontrol.yaml
openshift-container-platform-13/: opencontrol.yaml
openshift-container-platform-3/: header_opencontrol.yaml  opencontrol.yaml
openshift-container-platform-4/: header_opencontrol.yaml  opencontrol.yaml
openshift-dedicated/: component.yaml  header_opencontrol.yaml  opencontrol.yaml  openshift-dedicated.yaml
openstack/: Makefile  README.md  component.yaml  opencontrol.yaml
openstack-platform-13/: bugzilla-tracker.md  header_opencontrol.yaml  opencontrol.yaml
osp13/: component.yaml  opencontrol.yaml  osp13.yaml
profiles/: rhel-osp-13-fedramp-low.profile
rhacm/: header_opencontrol.yaml  opencontrol.yaml
rhel-7/: Makefile  header_opencontrol.yaml  opencontrol.yaml
rhel-8/: opencontrol.yaml
rhvh/: component.yaml  opencontrol.yaml  rhvh.yaml
rhvm/: component.yaml  opencontrol.yaml  rhvm.yaml
rpm_build/: opencontrol-redhat.spec
satellite-6/: header_opencontrol.yaml  opencontrol.yaml
virtualization-host/: README.md  header_opencontrol.yaml  opencontrol.yaml
virtualization-manager/: README.md  header_opencontrol.yaml  opencontrol.yaml
(+535 files in other folders)
